    - show prompt again after showing details 
    - use pager for long change entries
    (thanks to James Troup)
    - fix text wrap to not break lines on "-" (e.g. in package 
      names)
  * DistUpgradeController.py:
    - do not leave 20archive.save files around
    - make the code that asks about starting a new ssh daemon
      (if run under ssh) more robust
  * DistUpgrade/DistUpgrade.cfg.dapper:
    - add "lvm2" to the KeepInstalledPkgs (LP: #211488)
    - sync RemoveObsoletes, ForcedObsoletes, KeepInstalledSections
      with DistUpgrade.cfg
    - text wrap questions too
  * po/*.po:
    - updated translations (LP: #210699)

 --

update-manager (1:0.87.15) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix fd leak 
  * DistUpgrade/DistUpgradeController.py:
    - abort when debsig-verify is installed, it makes any
      upgrade fail (LP: #208957)
    - run migrate-fstab-to-uuid.sh as PostInstallScript (LP: #209347)
    - set RELEASE_UPGRADE_MODE={server,desktop} environment
  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash/race in terminal key press handler (LP: #205445)
    - fix encoding issue (LP: #208390)
    - call it 8.04 LTS (LP: #204659)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - fix incorrect pango attribute assignment (LP: #207742)
    - call it 8.04 LTS (LP: #204659)
  * UpdateManager/UpdateManager.py:
    - do not crash if gconf database is not writable (LP: #208687)
    - do not crash on BadStatusLine exceptions (LP: #204075)
  * po/*.po:
    - make update-po

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Apr 2008 22:30:42 +0200

update-manager (1:0.87.14) hardy; urgency=low

  * DistUpgrade/ReleaseAnnouncement:
    - Fix typo
  * DistUpgrade/DistUpgradeViewKDE.py:
    - Add show/hide to upgrade package list
  * DistUpgrade/window_main.ui:
    - Sync strings with GTK frontend to pick up translations
    - Update icon to Oxygen
	
 -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 21 Mar 2008 12:04:51 +0000
