@@ -10,6 +10,8 @@ update-manager (1:0.87.16) hardy; urgency=low
     - do not leave 20archive.save files around
     - make the code that asks about starting a new ssh daemon
       (if run under ssh) more robust
+    - set status to "Calculating changes" again after displaying
+      demoted packages
   * DistUpgrade/DistUpgrade.cfg.dapper:
     - add "lvm2" to the KeepInstalledPkgs (LP: #211488)
     - sync RemoveObsoletes, ForcedObsoletes, KeepInstalledSections
